# param

./: .gitignore  .gitmodules  CODEOWNERS  CONTRIBUTING.md  README.md  env_setup.sh  pyproject.toml  requirements.txt  torchx_run.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python_lint.yml
comms/: README.txt  comms.py  comms_utils.py  dlrm-comms.py  dlrm_data_pytorch.py  pytorch_nccl_backend.py  tpu_backend.py
compute/: README.txt  pytorch_emb.py  pytorch_gemm.py
docs/: using_ET.md
et_replay/: .flake8  .gitignore  .lintrunner.private.toml  .lintrunner.toml  README.md  __init__.py  et_replay_utils.py  execution_trace.py  mypy-strict.ini  mypy.ini  pyproject.toml  requirements.txt  utils.py
et_replay/.ci/docker/: requirements-ci.txt
et_replay/.github/workflows/: gpu-test.yml  lint.yml
et_replay/.llms/rules/: et-replay-workflow.md
et_replay/comm/: commsTraceParser.py  comms_utils.py  param_profile.py  profiler_trace_analysis.py  pytorch_backend_utils.py  pytorch_dist_backend.py  pytorch_tpu_backend.py
et_replay/comm/backend/: base_backend.py  pytorch_dist_backend.py  pytorch_torchcomms_backend.py  pytorch_tpu_backend.py
et_replay/configs/: replay-config-fbgemm.json
et_replay/lib/: __init__.py  chakra_trace_parser.py  et_replay_utils.py  execution_trace.py  utility.py  utils.py
et_replay/lib/comm/: __init__.py  comm_op_args.py  comm_stats.py  comm_tensor_allocator.py  comm_trace_parser.py  comm_trace_reader.py  comm_trace_replay_args.py  comm_trace_replayer.py  comm_utils.py  comms.py  commsTraceParser.py  commsTraceReplay.py  comms_utils.py  dlrm.py  dlrm_data.py  logger_utils.py  param_profile.py  param_timer.py  pytorch_backend_utils.py  pytorch_dist_backend.py  pytorch_tpu_backend.py  setup.py  utils.py
et_replay/lib/comm/backend/: __init__.py  base_backend.py  coll_args.py  mock.py  pytorch_dist.py  pytorch_tpu.py  pytorch_utils.py
et_replay/lib/comm/tests/: comms_utils_tests.py  test_utils.py
et_replay/lib/comp/: config.py  data.py  init_helper.py  operator.py
et_replay/lib/comp/pytorch/: build_executor.py  cuda_util.py  op_executor.py
et_replay/lib/tools/: comm_replay.py  et_replay.py  validate_trace.py
et_replay/lint-tools/linter/: dictionary.txt
et_replay/lint-tools/linter/adapters/: codespell_linter.py
et_replay/tests/: test_et_replay.py  test_execution_trace.py
et_replay/tests/param/: test_execution_trace.py
et_replay/tests/param/comm/: test_comm_utils.py  test_utils.py
et_replay/tests/param/comp/: test_generator.py
et_replay/tests/tools/: test_comms_replay.py
et_replay/tests/unit/: test_backend.py  test_comm_stats.py  test_comm_tensor_allocator.py  test_comm_trace_reader.py  test_utils.py
et_replay/tools/: comm_replay.py  et_replay.py  validate_trace.py
et_replay/vendor_internal/: fb_internal.py
example_input_files/run_ops/: alex_net.json  llama2.json  mm_range.json  resnet.json  simple_add.json  simple_mm.json
inference/compute/pt/: pytorch_linear.py
issue_templates/: default.md  feature_request.md
param/: logger_utils.py  param_profile.py
param/comm/backend/: mock.py  pytorch_utils.py
param/comp/pytorch/: benchmark.py  benchmark_helper.py  config_util.py  data_impl.py  timer.py
param/comp/workloads/pytorch/: alex_net.py  native_basic_ops.py  resnet.py  split_table_batched_embeddings_ops.py
tests/: commsTraceReplay_tests.py  comms_utils_tests.py  test_benchmark_load.py  test_execution_trace.py  test_generator.py  test_register.py  test_split_table_batched_embeddings_ops.py  test_utils.py
tests/pytorch/configs/: test_native_basic_ops.json
tools/: comm_replay.py  et_replay.py  nsys_analysis.py  run_batch.py  run_benchmark.py  run_op_split_table_batched_embeddings.py  validate_trace.py
train/comms/pt/: README.md  comms.py  commsComputeBench.py  commsOverlapBench.py  commsTraceParser.py  commsTraceReplay.py  comms_utils.py  dlrm.py  dlrm_data.py  logger_utils.py  matmul_perf_model.py  param_profile.py  pytorch_backend_utils.py  pytorch_dist_backend.py  pytorch_nccl_backend.py  pytorch_nvshmem_backend.py  pytorch_torchcomms_backend.py  pytorch_tpu_backend.py  setup.py  triton_matmul.py
train/comms/pt/tests/: commsTraceReplay_tests.py  comms_utils_tests.py  test_torchcomms_hccl_backend.py  test_utils.py
train/comms/pt/tests/mocks/: backend_mock.py
train/compute/pt/: README.md  collect_metric.py  dataset.py  development.md  driver.py  generator.py  pytorch_benchmark.py  pytorch_cutlass.py  pytorch_cvt_convs.py  pytorch_emb.py  pytorch_gemm.py  pytorch_linear.py  pytorch_op_bench.py  pytorch_op_config.py  pytorch_op_def.py  pytorch_op_interface.py  pytorch_op_metric.py  pytorch_op_util.py  run_benchmark.py
train/compute/pt/benchmark/: pytorch_basic_ops.py
train/compute/pt/param/benchmark/: native_basic_ops.py
train/compute/pt/param/lib/: benchmark.py  config.py  data.py  generator.py  init_helper.py  iterator.py  operator.py  timer.py
train/compute/pt/param/utils/: init_helper.py  timer.py
train/compute/pt/param/workloads/: native_basic_ops.py
train/compute/pt/standalone/: README.md  pytorch_gemm.py
train/compute/pt/test/: test_mm.json  test_mm_range.json  test_op.json
train/compute/pt/test/pytorch/: test_op.json
train/compute/python/: .gitignore  README.md  collect_cuda_metrics.py  collect_metrics.py  development.md  pytorch_benchmark.py  requirements.txt  setup.py
train/compute/python/examples/cuda/: ncu_args.txt
train/compute/python/lib/: __init__.py  config.py  data.py  generator.py  init_helper.py  iterator.py  operator.py  timer.py
train/compute/python/pytorch/: run_batch.py  run_benchmark.py
train/compute/python/test/: test_benchmark_load.py  test_execution_trace.py  test_generator.py  test_register.py  test_replay.py  test_split_table_batched_embeddings_ops.py  test_trace_link.py
train/compute/python/tools/: README.md  eg_replay.py  eg_replay_utils.py  et_replay.py  et_replay_utils.py  execution_graph.py  execution_trace.py  nsys_analysis.py  run_ncu.py  trace_link.py  utility.py  validate_trace.py
train/workloads/: README.md
(+39 files in other folders)
