[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "et_replay"
version = "0.5.0"
dependencies = [
    "numpy",
    "intervaltree",
    "pydot",
]

[tool.setuptools.package-dir]
"et_replay" = "et_replay"

[project.scripts]
comm_replay = "et_replay.tools.comm_replay:main"
et_replay = "et_replay.tools.et_replay:main"
validate_traces = "et_replay.tools.validate_traces:main"
